Vertical align fixes to category cards of post comments component

--- a/ngLoreHunter/src/app/shared/components/comments/comments.component.css
+++ b/ngLoreHunter/src/app/shared/components/comments/comments.component.css
@@ -275,7 +275,6 @@ mat-paginator {
   padding: 16px;
   background: rgb(6,142,167);
   background: linear-gradient(90deg, rgba(6,142,167,1) 0%, rgba(36,161,159,1) 40%);
-  min-height: 100px;
   border-radius:5px;
 
 }
@@ -284,7 +283,6 @@ mat-paginator {
   padding: 16px;
   background: rgb(6,142,167);
   background: linear-gradient(90deg, rgba(6,142,167,1) 0%, rgba(36,161,159,1) 40%);
-  min-height: 100px;
   border-radius:5px;
 
 }
@@ -670,4 +668,8 @@ li {
 
 .post-title {
   color: var(--text-color);
+}
+
+.title {
+  margin-bottom: 5px;
 }
